# delmain-ga4-mcp

./: .env.example  .gitignore  LICENSE  README.md  install-delmain-ga4-mcp.ps1  install-delmain-ga4-mcp.sh  pyproject.toml
skills/delmain-ga4/: SKILL.md
src/delmain_ga4_mcp/: __init__.py  auth.py  ga4.py  server.py  setup_cli.py
