[project]
name = "delmain-ga4-mcp"
version = "0.1.0"
description = "MCP server for Google Analytics 4, built for the :Delmain team"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = ":Delmain" }]
dependencies = [
    "mcp>=1.2.0",
    "google-analytics-data>=0.18",
    "google-analytics-admin>=0.22",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
]

[project.scripts]
delmain-ga4-mcp = "delmain_ga4_mcp.server:main"
delmain-ga4-mcp-setup = "delmain_ga4_mcp.setup_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/delmain_ga4_mcp"]
